# WebAssembly

./: CMakeLists.txt  README.md  index.js  index.wasm  package-lock.json  package.json  run.sh  server.txt
public/: a.wasm  a.wasm.wasm  main.wasm
public/views/: main.js
src/: main.cpp
